Fixed overlapping in grids

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,8 +7,7 @@
 }
 
 .navWrapper {
-    width: 100%;
-    height: 100%;
+    height: fit-content;
     color: #222;
     box-shadow: 0 2px 3px rgba(0, 0, 0, .37), 1px 2px 3px rgba(0, 0, 0, .54);
     z-index: 2; /* for it to be on top of some other elements */
@@ -17,7 +16,7 @@
 .application {
     height: 100%;
     display: grid;
-    grid-template-rows: 15% 0 85%;
+    grid-template-rows: max-content 0 auto;
 }
 
 /* we don't want the router-outlet to be rendered! */
