--- a/src/app/chatComponents/chatroom/chatroom.component.css
+++ b/src/app/chatComponents/chatroom/chatroom.component.css
@@ -8,7 +8,7 @@
 
 .chatHeaderWrapper {
     display: flex;
-    height: 50px;
+    height: fit-content;
     width: 100%;
     background-color: white;
     z-index: 1;
@@ -29,16 +29,5 @@
     padding: 8px;
 }
 
-span.chatNavToggle {
-    width: fit-content;
-    height: fit-content;
-    padding: 12px 16px;
-    color: white;
-    background-color: black;
-}
 
-span.chatNavToggle:hover {
-    background-color: gray;
-    color: #2A2845;
-}
 
